force-app/main/default/objects/Teacher__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <inlineHelpText>16 haneli IBAN numarasını aşağıdaki formatta giriniz
XXXX-XXXX-XXXX-XXXX</inlineHelpText>
    <label>IBAN</label>
    <length>16</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>