force-app/main/default/objects/Teacher__c/fields/isMentor__c.field-meta.xml
<CustomField>
    <fullName>isMentor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isMentor?</label>
    <type>Checkbox</type>
</CustomField>