force-app/main/default/objects/Teacher__c/validationRules/SalaryValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SalaryValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Salary__c &lt; 3000 || Salary__c &gt;10000</errorConditionFormula>
    <errorMessage>Salary 3000 ile 10000 arasında olmalıdır.</errorMessage>
</ValidationRule>